--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,74 +5,94 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GuiaDeEpisodios" xmlns:viewmodels="clr-namespace:GuiaDeEpisodios.ViewModels" xmlns:views="clr-namespace:GuiaDeEpisodios.Views" 
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" Background="#22223B" Icon="ico.png">
+        Title="The Witcher" Height="450" Width="800" Background="#22223B" Icon="ico.png">
     <Window.DataContext>
         <viewmodels:GuiaEpViewModel></viewmodels:GuiaEpViewModel>
     </Window.DataContext>
 
-    <ContentControl>
-        <ContentControl.Style>
-            <Style TargetType="ContentControl">
-                <Style.Triggers>
-
-                    <DataTrigger Binding="{Binding Ventana}" Value="{x:Static viewmodels:Ventanas.Temporadas}">
-                        <Setter Property="Content">
-                            <Setter.Value>
-                                <views:TemporadasView></views:TemporadasView>
-                            </Setter.Value>
-                        </Setter>
-                    </DataTrigger>
-
-                    <DataTrigger Binding="{Binding Ventana}" Value="{x:Static viewmodels:Ventanas.AgregarEpisodio}">
-                        <Setter Property="Content">
-                            <Setter.Value>
-                                <views:InfoEpisodioView></views:InfoEpisodioView>
-                            </Setter.Value>
-                        </Setter>
-                    </DataTrigger>
-
-                    <DataTrigger Binding="{Binding Ventana}" Value="{x:Static viewmodels:Ventanas.AgregarTemporada}">
-                        <Setter Property="Content">
-                            <Setter.Value>
-                                <views:InfoTemporadaView></views:InfoTemporadaView>
-                            </Setter.Value>
-                        </Setter>
-                    </DataTrigger>
-
-                    <DataTrigger Binding="{Binding Ventana}" Value="{x:Static viewmodels:Ventanas.EditarEpisodio}">
-                        <Setter Property="Content">
-                            <Setter.Value>
-                                <views:InfoEpisodioView></views:InfoEpisodioView>
-                            </Setter.Value>
-                        </Setter>
-                    </DataTrigger>
+    <Grid>
+        <views:TemporadasView></views:TemporadasView>
+        
+        <views:EliminarView Visibility="Collapsed">
+            <views:EliminarView.Style>
+                <Style TargetType="UserControl">
+                    <Setter Property="Visibility" Value="Collapsed"></Setter>
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding Ventana}" Value="{x:Static viewmodels:Ventanas.Eliminar}">
+                            <Setter Property="Visibility" Value="Visible"></Setter>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </views:EliminarView.Style>
+        </views:EliminarView>
 
 
-                    <DataTrigger Binding="{Binding Ventana}" Value="{x:Static viewmodels:Ventanas.EditarTemporada}">
-                        <Setter Property="Content">
-                            <Setter.Value>
-                                <views:InfoTemporadaView></views:InfoTemporadaView>
-                            </Setter.Value>
-                        </Setter>
-                    </DataTrigger>
+        <ContentControl>
+            <ContentControl.Style>
+                <Style TargetType="ContentControl">
+                    <Style.Triggers>
 
-                    <DataTrigger Binding="{Binding Ventana}" Value="{x:Static viewmodels:Ventanas.Eliminar}">
-                        <Setter Property="Content">
-                            <Setter.Value>
-                                <views:EliminarView></views:EliminarView>
-                            </Setter.Value>
-                        </Setter>
-                    </DataTrigger>
+                        <DataTrigger Binding="{Binding Ventana}" Value="{x:Static viewmodels:Ventanas.Temporadas}">
+                            <Setter Property="Content">
+                                <Setter.Value>
+                                    <views:TemporadasView></views:TemporadasView>
+                                </Setter.Value>
+                            </Setter>
+                        </DataTrigger>
 
-                    <DataTrigger Binding="{Binding Ventana}" Value="{x:Static viewmodels:Ventanas.Episodios}">
-                        <Setter Property="Content">
-                            <Setter.Value>
-                                <views:EpisodiosView></views:EpisodiosView>
-                            </Setter.Value>
-                        </Setter>
-                    </DataTrigger>
-                </Style.Triggers>
-            </Style>
-        </ContentControl.Style>
-    </ContentControl>
+                        <DataTrigger Binding="{Binding Ventana}" Value="{x:Static viewmodels:Ventanas.AgregarEpisodio}">
+                            <Setter Property="Content">
+                                <Setter.Value>
+                                    <views:InfoEpisodioView></views:InfoEpisodioView>
+                                </Setter.Value>
+                            </Setter>
+                        </DataTrigger>
+
+                        <DataTrigger Binding="{Binding Ventana}" Value="{x:Static viewmodels:Ventanas.AgregarTemporada}">
+                            <Setter Property="Content">
+                                <Setter.Value>
+                                    <views:InfoTemporadaView></views:InfoTemporadaView>
+                                </Setter.Value>
+                            </Setter>
+                        </DataTrigger>
+
+                        <DataTrigger Binding="{Binding Ventana}" Value="{x:Static viewmodels:Ventanas.EditarEpisodio}">
+                            <Setter Property="Content">
+                                <Setter.Value>
+                                    <views:InfoEpisodioView></views:InfoEpisodioView>
+                                </Setter.Value>
+                            </Setter>
+                        </DataTrigger>
+
+                        <DataTrigger Binding="{Binding Ventana}" Value="{x:Static viewmodels:Ventanas.EditarTemporada}">
+                            <Setter Property="Content">
+                                <Setter.Value>
+                                    <views:InfoTemporadaView></views:InfoTemporadaView>
+                                </Setter.Value>
+                            </Setter>
+                        </DataTrigger>
+                        
+                        <DataTrigger Binding="{Binding Ventana}" Value="{x:Static viewmodels:Ventanas.Episodios}">
+                            <Setter Property="Content">
+                                <Setter.Value>
+                                    <views:EpisodiosView></views:EpisodiosView>
+                                </Setter.Value>
+                            </Setter>
+                        </DataTrigger>
+
+                        <DataTrigger Binding="{Binding Ventana}" Value="{x:Static viewmodels:Ventanas.Eliminar}">
+
+                            <Setter Property="Content">
+                                <Setter.Value>
+                                    <views:EliminarView></views:EliminarView>
+                                </Setter.Value>
+                            </Setter>
+
+                        </DataTrigger>
+                        
+                    </Style.Triggers>
+                </Style>
+            </ContentControl.Style>
+        </ContentControl>
+    </Grid>
 </Window>
