--- a/Views/EliminarView.xaml
+++ b/Views/EliminarView.xaml
@@ -5,18 +5,18 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:GuiaDeEpisodios.Views" xmlns:viewmodels="clr-namespace:GuiaDeEpisodios.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:GuiaEpViewModel}"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800" Background="#70000000">
 
-    <StackPanel VerticalAlignment="Center" Background="Red">
-        <StackPanel Background="#4A4E69" Margin="-1,-1,-1,0">
+    <StackPanel VerticalAlignment="Center" Background="#1D7F8D">
+        <StackPanel Background="#02515C" Margin="-1,-1,-1,0">
             <TextBlock  Foreground="#F2E9E4" Opacity="0.90" FontSize="40" Padding="10" FontWeight="SemiBold"> ¿ Está seguro que desea 
-        <Run FontWeight="Bold">
+        <Run FontWeight="ExtraBlack">
             eliminar ?
         </Run>
 
             </TextBlock>
             <TextBlock  Foreground="#F2E9E4" Opacity="0.90" FontSize="25" HorizontalAlignment="Stretch" Padding="10" FontWeight="Thin"> Los cambios realizados serán 
-            <Run Foreground="DarkRed" FontWeight="SemiBold">
+            <Run Foreground="DarkRed" FontWeight="ExtraBlack">
                 permanentes
             </Run>
             </TextBlock>
@@ -27,9 +27,11 @@
             <Button Name="BtnEliminar">Eliminar
                 <Button.Style>
                     <Style TargetType="Button">
-                        <Setter Property="FontSize" Value="16"/>
+                        <Setter Property="FontSize" Value="22"/>
                         <Setter Property="FontWeight" Value="DemiBold"/>
                         <Setter Property="Margin" Value="10"/>
+                        <Setter Property="Background" Value="#F2E9E4"/>
+                        <Setter Property="Foreground" Value="#22223B"/>
                         <Style.Triggers>
                             <DataTrigger Binding="{Binding VentanaAnteriorABorrar}" Value="{x:Static viewmodels:Ventanas.Episodios}">
                                 <!--<Setter Property="Background" Value="Aqua"></Setter>-->
