--- a/Views/EpisodioView.xaml
+++ b/Views/EpisodioView.xaml
@@ -6,9 +6,15 @@
              xmlns:local="clr-namespace:GuiaDeEpisodios.Views" xmlns:viewmodels="clr-namespace:GuiaDeEpisodios.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:GuiaEpViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <StackPanel Width="190" Margin="10,0,10,0">
+    <StackPanel VerticalAlignment="Stretch" Width="220" Margin="10,0,10,0">
+        <StackPanel.Background>
+            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                <GradientStop Color="#B2136872"/>
+                <GradientStop Color="#CC0E5861" Offset="1"/>
+            </LinearGradientBrush>
+        </StackPanel.Background>
         <TextBlock Text="{Binding Nombre}" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="18" FontWeight="Bold" TextWrapping="Wrap" TextAlignment="Center"></TextBlock>
-        <Image Source="{Binding ImagenEp}" Width="170" Height="160"> </Image>
+        <Image Source="{Binding ImagenEp}" Width="170" Height="160"></Image>
         <TextBlock Text="{Binding Descripcion}" FontSize="16" HorizontalAlignment="Left" TextWrapping="Wrap"></TextBlock>
     </StackPanel>
 </UserControl>
